<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.example.receiptsbooks.ui.custom.BgRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/bgCameraColor">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/home_looper_pager"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="60dp"/>

            <LinearLayout
                android:id="@+id/home_point_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_below="@+id/home_looper_pager"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"/>

            <TextView
                android:id="@+id/home_tv_histories"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/shape_home_record_btn_bg"
                android:gravity="center"
                android:text="@string/text_home_extract_records"
                android:textColor="@color/colorWhite"
                android:layout_alignParentEnd="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/home_point_container"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:id="@+id/home_ll_expend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/home_divide_view"
                    android:layout_marginEnd="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/home_tv_total_expend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/text_home_cur_month_expend_default"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/home_tv_cur_month_expend_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/text_home_cur_month_expend"
                        android:textColor="@color/colorWhite" />

                </LinearLayout>


                <View
                    android:id="@+id/home_divide_view"
                    android:layout_width="2dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/shape_home_divide_view"/>

                <LinearLayout
                    android:id="@+id/home_ll_budget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/home_divide_view"
                    android:layout_marginStart="30dp"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/home_tv_total_budget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/text_home_cur_month_balance_default"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/home_tv_cur_month_budget_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/text_home_cur_month_balance"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>

            </RelativeLayout>


        </com.example.receiptsbooks.ui.custom.BgRelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/text_home_today_expend_tips"/>

            <TextView
                android:id="@+id/home_tv_today_total_expend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/text_home_today_expend_default"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/base_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>