<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/date_picker_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/text_date_picker_title"
            android:textColor="@color/colorMainBlue"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date_picker_tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/text_date_picker_confirm"
            android:textColor="@color/colorMainBlue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/date_picker_tv_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/date_picker_tv_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/date_picker_divider"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <com.example.receiptsbooks.ui.custom.datepicker.PickerView
            android:id="@+id/dpv_year"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_date_dialog_picker"
            android:layout_weight="3" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/year"
            android:textColor="@color/date_picker_text_dark"
            android:textSize="@dimen/dimen_date_dialog_text" />

        <com.example.receiptsbooks.ui.custom.datepicker.PickerView
            android:id="@+id/dpv_month"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_date_dialog_picker"
            android:layout_weight="2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/month"
            android:textColor="@color/date_picker_text_dark"
            android:textSize="@dimen/dimen_date_dialog_text" />

        <com.example.receiptsbooks.ui.custom.datepicker.PickerView
            android:id="@+id/dpv_day"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_date_dialog_picker"
            android:layout_weight="2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day"
            android:textColor="@color/date_picker_text_dark"
            android:textSize="@dimen/dimen_date_dialog_text" />

        <com.example.receiptsbooks.ui.custom.datepicker.PickerView
            android:id="@+id/dpv_hour"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_date_dialog_picker"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/tv_hour_unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/hour"
            android:textColor="@color/date_picker_text_dark"
            android:textSize="@dimen/dimen_date_dialog_text" />

        <com.example.receiptsbooks.ui.custom.datepicker.PickerView
            android:id="@+id/dpv_minute"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_date_dialog_picker"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/tv_minute_unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/minute"
            android:textColor="@color/date_picker_text_dark"
            android:textSize="@dimen/dimen_date_dialog_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>